Update jobservice to new version with latest changes